# multi-party-sig-cpp

./: CMakeLists.txt  README.md
.github/workflows/: poc.yml
cmake/: MultiPartySigConfig.cmake.in  MultiPartySigSgxConfig.cmake.in
src/: CMakeLists.txt
src/multi-party-sig/two-party-ecdsa/lindell17/: SECURITY_NOTICE.md
src/multi-party-sig/two-party-ecdsa/lindell17/sign/: P1Context.cpp
test/cmp/: sign_test.cpp
